--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pygame>=2.6.1",
+    "sb3-contrib>=2.7.0",
     "stable-baselines3[extra]>=2.7.0",
 ]
 
